syntax = "proto3";

package user;

option go_package = "user/proto";

service UserService {
  rpc GetUserById (GetUserRequest) returns (GetUserResponse);
  rpc Ping (PingRequest) returns (PingResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  bool is_active = 4;
  string last_activity = 5;
}

message PingRequest {

}

message PingResponse {
  string message = 1;
}